Chore: Normalize CSP meta via injector and remove header-level CSP to avoid conflicts. Add JSON-LD hashes sitewide. Smoke-tested RSS aggregate.

--- a/contacto.html
+++ b/contacto.html
@@ -20,8 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2025111507">
     <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Contacto - This is Fuerteventura">
@@ -29,7 +28,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://thisisfuerteventura.netlify.app/contacto.html">
     <meta property="og:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-rV1ZcNZbOte5PFt4An4P4IK3fGqI5TkSEE4/Yh2iQI8='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
     
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
@@ -170,11 +169,11 @@
             <p>This is Fuerteventura es una guía independiente pensada para ayudarte a descubrir la isla: noticias, planes, gastronomía y consejos prácticos. Reunimos información útil y la presentamos de forma clara para que planifiques tu viaje o disfrutes si ya vives aquí.</p>
             <div class="about-grid">
                 <figure>
-                    <img src="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?auto=format&fit=crop&w=1200&q=80" alt="Costa de Fuerteventura" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?auto=format&fit=crop&w=1200&q=80" alt="Costa de Fuerteventura">
                     <figcaption>Costa y acantilados</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://images.unsplash.com/photo-1544551763-7ef4200b50cb?auto=format&fit=crop&w=1200&q=80" alt="Playa y dunas" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <img src="https://images.unsplash.com/photo-1544551763-7ef4200b50cb?auto=format&fit=crop&w=1200&q=80" alt="Playa y dunas">
                     <figcaption>Playas y dunas</figcaption>
                 </figure>
             </div>
@@ -284,7 +283,7 @@
                 <button id="cookie-modal-close" class="cookie-modal-close">&times;</button>
             </div>
             <div class="cookie-modal-body">
-                <p style="margin-bottom: 20px; color: #666;">
+                <p class="cookie-intro">
                     Utilizamos diferentes tipos de cookies para mejorar tu experiencia en nuestro sitio web. 
                     Puedes elegir qué categorías deseas permitir.
                 </p>
