--- a/noticia.html
+++ b/noticia.html
@@ -20,8 +20,7 @@
 	    <link rel="stylesheet" href="css/styles.css?v=2025111507">
 	    <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
 	
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"></noscript>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	
 	<!-- Open Graph - Serán actualizados dinámicamente por JS -->
 	<meta property="og:type" content="article">
@@ -31,7 +30,7 @@
 	<!-- Twitter Cards - Serán actualizados dinámicamente por JS -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
 </head>
 <body class="article-page">
 	<a class="skip-link" href="#main">Saltar al contenido principal</a>
@@ -136,7 +135,7 @@
 				<button id="cookie-modal-close" class="cookie-modal-close">&times;</button>
 			</div>
 			<div class="cookie-modal-body">
-				<p style="margin-bottom: 20px; color: #666;">
+				<p class="cookie-intro">
 					Utilizamos diferentes tipos de cookies para mejorar tu experiencia en nuestro sitio web. 
 					Puedes elegir qué categorías deseas permitir.
 				</p>
