--- a/turismo.html
+++ b/turismo.html
@@ -24,8 +24,7 @@
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- Font Awesome 6 -->
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="description" content="Guía turística de Fuerteventura 2025: descubre parques naturales, pueblos con encanto, museos, miradores y los mejores lugares que visitar en la isla.">
     <meta name="keywords" content="turismo Fuerteventura, qué ver en Fuerteventura, lugares turísticos Fuerteventura, excursiones Fuerteventura, parques naturales, pueblos Fuerteventura, atracciones Canarias">
     <meta name="robots" content="index, follow">
@@ -42,7 +41,7 @@
     <meta name="twitter:title" content="Turismo en Fuerteventura - Guía Completa">
     <meta name="twitter:description" content="Los mejores lugares turísticos de Fuerteventura: parques, pueblos y atracciones.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-wVPS8tcqa4ult0sE3z6eDRlRNyA9EvYpH09AF8XL0tU='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -100,7 +99,7 @@
         <h2>Lugares de interés</h2>
         <div class="tourism-grid card-stagger">
             <article class="tourism-card">
-                <img src="images/turismo/corralejo-dunas.jpg?v=2" alt="Parque Natural de Corralejo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/corralejo-dunas.jpg?v=2" alt="Parque Natural de Corralejo" loading="lazy">
                 <div class="tourism-info">
                     <h3>Parque Natural de Corralejo</h3>
                     <p>Explora las impresionantes dunas de arena dorada y las vistas al mar cristalino en uno de los parques naturales más emblemáticos de la isla. Las Grandes Playas se extienden por kilómetros junto al azul turquesa del Atlántico: madruga para evitar el viento y disfruta de un paseo entre dunas.</p>
@@ -114,7 +113,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/betancuria.jpg?v=2" alt="Betancuria" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/betancuria.jpg?v=2" alt="Betancuria" loading="lazy">
                 <div class="tourism-info">
                     <h3>Betancuria</h3>
                     <p>Visita la antigua capital de Fuerteventura, un pueblo histórico con arquitectura colonial y museos fascinantes. Recorre sus calles empedradas, entra a la iglesia de Santa María y toma un café con vistas al barranco.</p>
@@ -128,7 +127,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/faro-morro-jable.jpg?v=2" alt="Faro de Morro Jable" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/faro-morro-jable.jpg?v=2" alt="Faro de Morro Jable" loading="lazy">
                 <div class="tourism-info">
                     <h3>Faro de Morro Jable</h3>
                     <p>Contempla las mejores puestas de sol de la isla desde este emblemático faro en el sur de Fuerteventura. Al atardecer, el cielo se tiñe de tonos dorados y rosados sobre la playa de Jandía.</p>
@@ -142,7 +141,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/isla-de-lobos.jpg?v=2" alt="Isla de Lobos" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/isla-de-lobos.jpg?v=2" alt="Isla de Lobos" loading="lazy">
                 <div class="tourism-info">
                     <h3>Isla de Lobos</h3>
                     <p>Descubre este paraíso natural a solo 15 minutos en barco desde Corralejo, perfecto para senderismo y snorkel. Reserva con tiempo el permiso de visita y sigue el sendero hasta el Puertito para un baño inolvidable.</p>
@@ -155,7 +154,7 @@
                 </div></article>
 
             <article class="tourism-card">
-                <img src="images/turismo/el-cotillo.avif" alt="El Cotillo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/el-cotillo.avif" alt="El Cotillo" loading="lazy">
                 <div class="tourism-info">
                     <h3>El Cotillo</h3>
                     <p>Pueblo pesquero con encanto en la costa norte.</p>
@@ -166,7 +165,7 @@
                 </div></article>
 
             <article class="tourism-card">
-                <img src="images/turismo/cofete.jpg" alt="Playa de Cofete" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/cofete.jpg" alt="Playa de Cofete" loading="lazy">
                 <div class="tourism-info">
                     <h3>Playa de Cofete</h3>
                     <p>Una de las playas más salvajes y vírgenes de Canarias, rodeada de montañas y con un ambiente místico. El acceso por pista de tierra añade aventura, pero las vistas merecen cada bache.</p>
@@ -180,7 +179,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/ajuy.webp" alt="Cuevas de Ajuy" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/ajuy.webp" alt="Cuevas de Ajuy" loading="lazy">
                 <div class="tourism-info">
                     <h3>Cuevas de Ajuy</h3>
                     <p>Formaciones geológicas milenarias en la costa oeste, con cuevas excavadas por el mar y acantilados de roca volcánica. Pasea por el sendero costero y contempla la fuerza del océano.</p>
@@ -194,7 +193,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/la-oliva.avif" alt="La Oliva" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/la-oliva.avif" alt="La Oliva" loading="lazy">
                 <div class="tourism-info">
                     <h3>La Oliva</h3>
                     <p>Villa histórica con la iglesia de Nuestra Señora de Candelaria y la Casa de los Coroneles, una de las edificaciones más importantes de la arquitectura civil canaria.</p>
@@ -207,7 +206,7 @@
                 </div></article>
 
             <article class="tourism-card">
-                <img src="images/turismo/mirador-morro-velosa.jpg" alt="Mirador de Morro Velosa" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/mirador-morro-velosa.jpg" alt="Mirador de Morro Velosa" loading="lazy">
                 <div class="tourism-info">
                     <h3>Mirador de Morro Velosa</h3>
                     <p>Diseñado por César Manrique, ofrece vistas panorámicas a 360 grados del interior de Fuerteventura.</p>
@@ -219,7 +218,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/caleta-de-fuste.jpg" alt="Caleta de Fuste" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/caleta-de-fuste.jpg" alt="Caleta de Fuste" loading="lazy">
                 <div class="tourism-info">
                     <h3>Caleta de Fuste</h3>
                     <p>Centro turístico familiar con playa protegida, ideal para niños. Campo de golf y puerto deportivo.</p>
@@ -231,7 +230,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/puerto-del-rosario-.jpg" alt="Puerto del Rosario" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/puerto-del-rosario-.jpg" alt="Puerto del Rosario" loading="lazy">
                 <div class="tourism-info">
                     <h3>Puerto del Rosario</h3>
                     <p>Capital de la isla con murales artísticos urbanos, museos de arte y la Casa Museo Unamuno.</p>
@@ -243,7 +242,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/tindaya.webp" alt="Montaña de Tindaya" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/tindaya.webp" alt="Montaña de Tindaya" loading="lazy">
                 <div class="tourism-info">
                     <h3>Montaña de Tindaya</h3>
                     <p>Montaña sagrada para los aborígenes majoreros, con grabados rupestres en su cumbre.</p>
@@ -255,7 +254,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/parque-natural-jandia.jpg" alt="Parque Natural de Jandía" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/parque-natural-jandia.jpg" alt="Parque Natural de Jandía" loading="lazy">
                 <div class="tourism-info">
                     <h3>Parque Natural de Jandía</h3>
                     <p>Reserva natural en el sur de la isla con playas infinitas y fauna endémica.</p>
@@ -267,7 +266,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/ecomuseo-la-alcogida.jpg" alt="Ecomuseo La Alcogida" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/ecomuseo-la-alcogida.jpg" alt="Ecomuseo La Alcogida" loading="lazy">
                 <div class="tourism-info">
                     <h3>Ecomuseo La Alcogida</h3>
                     <p>Conjunto de casas tradicionales restauradas que muestran la vida rural de Fuerteventura.</p>
@@ -279,7 +278,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/molino-antigua.jpg" alt="Molino de Antigua" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/molino-antigua.jpg" alt="Molino de Antigua" loading="lazy">
                 <div class="tourism-info">
                     <h3>Molino de Antigua</h3>
                     <p>Molino de viento restaurado convertido en museo del gofio y centro de artesanía.</p>
@@ -291,7 +290,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/popcorn-beach.jpg" alt="Playa de las Palomitas" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/popcorn-beach.jpg" alt="Playa de las Palomitas" loading="lazy">
                 <div class="tourism-info">
                     <h3>Playa de las Palomitas</h3>
                     <p>Pequeña cala cubierta de palomitas blancas formadas por algas calcáreas fosilizadas.</p>
@@ -303,7 +302,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/salinas-carmen.webp" alt="Salinas del Carmen" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/salinas-carmen.webp" alt="Salinas del Carmen" loading="lazy">
                 <div class="tourism-info">
                     <h3>Salinas del Carmen</h3>
                     <p>Salinas artesanales en funcionamiento desde el siglo XVIII con museo de la sal.</p>
@@ -315,7 +314,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/punta-pesebre.jpg" alt="Punta de Pesebre" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/punta-pesebre.jpg" alt="Punta de Pesebre" loading="lazy">
                 <div class="tourism-info">
                     <h3>Punta de Pesebre</h3>
                     <p>Punto extremo norte de Fuerteventura con vistas a Lanzarote y acantilados dramáticos.</p>
@@ -354,15 +353,15 @@
         <h2>Galería de inspiración</h2>
         <div class="gallery-grid">
             <figure>
-                <img src="images/turismo/dunas-mar.jpg" alt="Dunas y mar" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/dunas-mar.jpg" alt="Dunas y mar" loading="lazy">
                 <figcaption>Dunas y mar</figcaption>
             </figure>
             <figure>
-                <img src="images/turismo/olas-costa.jpg" alt="Olas y costa" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/olas-costa.jpg" alt="Olas y costa" loading="lazy">
                 <figcaption>Olas del Atlántico</figcaption>
             </figure>
             <figure>
-                <img src="images/turismo/atardecer.jpg" alt="Atardecer" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/atardecer.jpg" alt="Atardecer" loading="lazy">
                 <figcaption>Atardeceres únicos</figcaption>
             </figure>
         </div>
@@ -428,7 +427,7 @@
         </div>
     </section>
     <!-- Contenedor oculto de noticias para alimentar el timeline -->
-    <div id="featured-news" style="display:none" aria-hidden="true"></div>
+    <div id="featured-news" class="hidden" aria-hidden="true"></div>
 
     </main>
 
@@ -514,7 +513,7 @@
                 <button id="cookie-modal-close" class="cookie-modal-close">&times;</button>
             </div>
             <div class="cookie-modal-body">
-                <p style="margin-bottom: 20px; color: #666;">
+                <p class="cookie-intro">
                     Utilizamos diferentes tipos de cookies para mejorar tu experiencia en nuestro sitio web. 
                     Puedes elegir qué categorías deseas permitir.
                 </p>
