--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Swiper for galleries/timeline -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <!-- Font Awesome 6 -->
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
+    <!-- Font Awesome 6 (stylesheet direct to avoid inline onload attribute for stricter CSP) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="description" content="Descubre Fuerteventura con nuestra guía completa 2025: mejores playas, hoteles, restaurantes, actividades turísticas y noticias actualizadas de las Islas Canarias.">
     <meta name="keywords" content="Fuerteventura, turismo Fuerteventura, playas Fuerteventura, hoteles Fuerteventura, Islas Canarias, qué hacer en Fuerteventura, alojamiento Canarias, vacaciones Fuerteventura">
     <meta name="author" content="This is Fuerteventura">
@@ -47,7 +46,7 @@
     <meta name="twitter:title" content="This is Fuerteventura - Guía Turística Completa 2025">
     <meta name="twitter:description" content="Descubre Fuerteventura: mejores playas, hoteles, restaurantes y actividades turísticas.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-q/E19laQ8YkNXt/2DHRkmiWwwkEBSOU9ynZbH746Tn0=' 'sha256-wu+NVa8OHFEV3NFqw5k+OVKNgRVx9fkUfbY9FVk1cxo='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001 https://api.open-meteo.com https://marine-api.open-meteo.com;">
     <meta name="twitter:site" content="@thisisfuerteventura">
     
     <!-- Structured Data: Website -->
@@ -259,39 +258,7 @@
         </div>
     </footer>
 
-    <script>
-        // Detección de Netlify Functions (probando endpoint aggregate)
-        window.__RSS_PROXY_READY = new Promise((resolve) => {
-            try {
-                const controller = new AbortController();
-                const id = setTimeout(() => controller.abort(), 1500);
-                // Probar con el endpoint aggregate que existe
-                fetch('/.netlify/functions/aggregate', { signal: controller.signal, cache: 'no-store' })
-                    .then(async r => { 
-                        try {
-                            const ctype = r.headers.get('content-type') || '';
-                            // Considerar válido solo si devuelve JSON y estructura esperada
-                            if (r.ok && ctype.includes('application/json')) {
-                                const data = await r.clone().json().catch(() => null);
-                                if (data && (Array.isArray(data.items) || data.items === undefined)) {
-                                    window.__RSS_PROXY_URL = '';  // Cadena vacía para usar rutas relativas
-                                    console.log('✓ Netlify Functions detectadas, usando rutas relativas');
-                                }
-                            }
-                        } catch (_) { /* ignorar */ }
-                    })
-                    .catch((e) => {
-                        console.log('ℹ Netlify Functions no disponibles, intentando proxy local');
-                    })
-                    .finally(() => {
-                        clearTimeout(id);
-                        resolve();
-                    });
-            } catch (_) {
-                resolve();
-            }
-        });
-    </script>
+    
     <!-- Three.js for particle system -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js" defer></script>
     <!-- GSAP + ScrollTrigger for narrative animations -->
@@ -322,7 +289,7 @@
                 <button id="cookie-modal-close" class="cookie-modal-close">&times;</button>
             </div>
             <div class="cookie-modal-body">
-                <p style="margin-bottom: 20px; color: #666;">
+                <p class="cookie-intro">
                     Utilizamos diferentes tipos de cookies para mejorar tu experiencia en nuestro sitio web. 
                     Puedes elegir qué categorías deseas permitir.
                 </p>
