Security/Perf: Add automated SRI injection for external CDN assets (CSS/JS) and apply across pages. Script: tools/inject-sri.js.

--- a/noticia.html
+++ b/noticia.html
@@ -20,7 +20,7 @@
 	    <link rel="stylesheet" href="css/styles.css?v=2025111507">
 	    <link rel="preload" href="images/Fuerteventura.jpeg" as="image" fetchpriority="high">
 	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" integrity="sha384-t1nt8BQoYMLFN5p42tRAtuAAFQaCQODekUVeKKZrEnEyp4H2R0RHFz0KWpmj7i8g">
 	
 	<!-- Open Graph - Serán actualizados dinámicamente por JS -->
 	<meta property="og:type" content="article">
@@ -103,7 +103,7 @@
 	</footer>
 
 	<script src="js/main.js?v=2025111503" defer></script>
-	<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer crossorigin="anonymous" integrity="sha384-Tsl3d5pUAO7a13enIvSsL3O0/95nsthPJiPto5NtLuY8w3+LbZOpr3Fl2MNmrh1E"></script>
     <script src="js/article-loader.js?v=2025111007" defer></script>
     <script src="js/cookies.js?v=2025111001" defer></script>
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
