--- a/test-dedupe.html
+++ b/test-dedupe.html
@@ -205,7 +205,7 @@
     </script>
     
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer crossorigin="anonymous" integrity="sha384-Tsl3d5pUAO7a13enIvSsL3O0/95nsthPJiPto5NtLuY8w3+LbZOpr3Fl2MNmrh1E"></script>
     <script src="js/feed-utils.js?v=2025111005" defer></script>
     <script src="js/image-extractor.js?v=2025110901" defer></script>
 </body>
