--- a/playas.html
+++ b/playas.html
@@ -60,13 +60,13 @@
             <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="70" height="70">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav id="site-nav" aria-label="Navegación principal">
+        <nav id="site-nav" aria-label="Navegación principal" role="navigation">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="turismo.html">Turismo</a></li>
                 <li><a href="alojamiento.html">Alojamiento</a></li>
-                <li><a href="playas.html">Playas</a></li>
+                <li><a href="playas.html" aria-current="page">Playas</a></li>
                 <li><a href="gastronomia.html">Gastronomía</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
