--- a/alojamiento.html
+++ b/alojamiento.html
@@ -64,12 +64,12 @@
             <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="70" height="70">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav id="site-nav" aria-label="Navegación principal">
+        <nav id="site-nav" aria-label="Navegación principal" role="navigation">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="turismo.html">Turismo</a></li>
-                <li><a href="alojamiento.html">Alojamiento</a></li>
+                <li><a href="alojamiento.html" aria-current="page">Alojamiento</a></li>
                 <li><a href="playas.html">Playas</a></li>
                 <li><a href="gastronomia.html">Gastronomía</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -95,7 +95,7 @@
 
     <section class="accommodation-search reveal">
         <h2>Busca tu alojamiento ideal</h2>
-        <form class="search-form">
+        <form class="search-form" role="search" aria-label="Buscar alojamiento">
             <div class="form-group">
                 <label for="location">Zona</label>
                 <select id="location" name="location">
