--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy" decoding="async" width="70" height="70">
             <h1>This is Fuerteventura</h1>
         </div>
-        <nav id="site-nav" aria-label="Navegación principal">
+        <nav id="site-nav" aria-label="Navegación principal" role="navigation">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html" aria-current="page">Inicio</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="turismo.html">Turismo</a></li>
                 <li><a href="alojamiento.html">Alojamiento</a></li>
@@ -143,30 +143,30 @@
     <section class="categories reveal">
         <h2>Explora Fuerteventura</h2>
         <div class="category-grid">
-            <div class="category-card">
+            <article class="category-card">
                 <img src="images/playa_del_castillo_caleta_de_fuste.webp" alt="Noticias de Fuerteventura" loading="lazy">
                 <h3>Noticias</h3>
                 <p>Mantente al día con las últimas noticias de la isla.</p>
                 <a href="noticias.html" class="btn">Ver noticias</a>
-            </div>
-            <div class="category-card">
+            </article>
+            <article class="category-card">
                 <img src="images/betancuria.webp" alt="Turismo en Fuerteventura" loading="lazy">
                 <h3>Turismo</h3>
                 <p>Descubre los mejores lugares para visitar.</p>
                 <a href="turismo.html" class="btn">Explorar</a>
-            </div>
-            <div class="category-card">
+            </article>
+            <article class="category-card">
                 <img src="images/vistalobos.jpg" alt="Alojamiento en Fuerteventura" loading="lazy">
                 <h3>Alojamiento</h3>
                 <p>Encuentra el lugar perfecto para hospedarte.</p>
                 <a href="alojamiento.html" class="btn">Ver opciones</a>
-            </div>
-            <div class="category-card">
+            </article>
+            <article class="category-card">
                 <img src="images/playa-del-cotillo.jpg" alt="Playas de Fuerteventura" loading="lazy">
                 <h3>Playas</h3>
                 <p>Las mejores playas de arena blanca y aguas cristalinas.</p>
                 <a href="playas.html" class="btn">Descubrir</a>
-            </div>
+            </article>
         </div>
     </section>
 
