Feat: Hero inmersivo + GSAP scroll, mapa hotspots, Swiper parallax, dark mode toggle y validación de formularios
- Añade animaciones de scroll con GSAP (reveal + parallax)
- Mapa interactivo de hotspots sin tiles externos (CSP-friendly)
- Inicialización de Swiper con parallax para timeline/galerías
- Toggle Dark/Light persistente respetando prefers-color-scheme
- Validación en tiempo real del newsletter con feedback visual y ARIA
- Microinteracciones en navegación y mejoras para pantallas grandes
- Limpieza de referencias a scripts inexistentes
- Utilidad .visually-hidden para feedback accesible

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         </button>
     </header>
     <main id="main">
-    <section class="hero parallax reveal hero-video">
-      <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
+        <section class="hero parallax reveal hero-video">
+            <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
         <source src="images/VideoHeader.mp4" type="video/mp4">
         Tu navegador no soporta vídeo.
       </video>
@@ -370,6 +370,7 @@
     <script src="js/feed-utils.js?v=2025111005" defer></script>
     <script src="js/image-extractor.js?v=2025110901" defer></script>
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
+    <script src="js/swiper-init.js?v=2025111502" defer></script>
     
     <!-- Scripts principales -->
     <script src="js/main.js?v=2025111503" defer></script>
@@ -380,7 +381,6 @@
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
     <script src="js/dark-mode.js?v=2025111502" defer></script>
     <script src="js/interactive-map.js?v=2025111502" defer></script>
-    <script src="js/gamification.js?v=2025111502" defer></script>
-    <script src="js/real-time-data.js?v=2025111502" defer></script>
+    <script src="js/form-validation.js?v=2025111502" defer></script>
 </body>
 </html>
