--- a/noticias.html
+++ b/noticias.html
@@ -203,6 +203,7 @@
     
     <script src="js/main.js?v=2025111503" defer></script>
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
+    <script src="js/swiper-init.js?v=2025111502" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer crossorigin="anonymous" integrity="sha384-Tsl3d5pUAO7a13enIvSsL3O0/95nsthPJiPto5NtLuY8w3+LbZOpr3Fl2MNmrh1E"></script>
     <script src="js/feed-utils.js?v=2025111005" defer></script>
     <script src="js/image-extractor.js?v=2025110901" defer></script>
@@ -212,8 +213,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer crossorigin="anonymous" integrity="sha384-hPkhOzAEx2ZcJuDkANAhjXmtEnqjkADleTxUbwTTJLmwmhV2F4/u6BOcnVL3xxqs"></script>
     <script src="js/scroll-animations.js?v=2025111502" defer></script>
     <script src="js/dark-mode.js?v=2025111502" defer></script>
-    <script src="js/ux.js?v=2025111502" defer></script>
-    <script src="js/ambient.js?v=2025111502" defer></script>
+    <script src="js/form-validation.js?v=2025111502" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
