feat(blog/quiz/ambient): - Blog básico (blog.html, blog-post.html) + data/blog.json + js/blog.js - Quiz CSP-friendly con insignia descargable (quiz.html, js/quiz.js) - Sonidos ambientales opcionales (js/ambient-sounds.js) - Scroll narrativo con indicador de capítulos (js/narrative-scroll.js) y wiring en index/noticias - Home: preview del blog + scripts ligados

--- a/noticias.html
+++ b/noticias.html
@@ -214,6 +214,7 @@
     <script src="js/scroll-animations.js?v=2025111508" defer></script>
     <script src="js/dark-mode.js?v=2025111508" defer></script>
     <script src="js/form-validation.js?v=2025111508" defer></script>
+    <script src="js/narrative-scroll.js?v=2025111508" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
