--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="This is Fuerteventura - Guía Turística Completa 2025">
-    <meta name="twitter:description" content="Descubre Fuerteventura: mejores playas, hoteles, restaurantes y actividades turísticas.">
+    <meta name="twitter:description" content="Descubre Fuerteventura: playas, hoteles, restaurantes y actividades imprescindibles.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-q/E19laQ8YkNXt/2DHRkmiWwwkEBSOU9ynZbH746Tn0=' 'sha256-wu+NVa8OHFEV3NFqw5k+OVKNgRVx9fkUfbY9FVk1cxo='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001 https://api.open-meteo.com https://marine-api.open-meteo.com; base-uri 'self'; object-src none; frame-ancestors 'self';">
     <meta name="twitter:site" content="@thisisfuerteventura">
@@ -181,6 +181,13 @@
                 <div class="loading">Cargando condiciones del mar...</div>
             </div>
         </div>
+    </section>
+
+    <!-- Blog preview -->
+    <section class="reveal">
+        <h2>Blog: rutas y entrevistas</h2>
+        <div id="blog-preview"></div>
+        <p><a class="btn" href="blog.html">Leer el blog</a></p>
     </section>
 
     <!-- Mapa interactivo de Fuerteventura -->
@@ -382,5 +389,9 @@
     <script src="js/dark-mode.js?v=2025111508" defer></script>
     <script src="js/interactive-map.js?v=2025111508" defer></script>
     <script src="js/form-validation.js?v=2025111508" defer></script>
+    <script src="js/blog.js?v=2025111508" defer></script>
+    <script src="js/quiz.js?v=2025111508" defer></script>
+    <script src="js/ambient-sounds.js?v=2025111508" defer></script>
+    <script src="js/narrative-scroll.js?v=2025111508" defer></script>
 </body>
 </html>
