feat(ambient): habilitar control de sonidos ambientales en todas las páginas y mejora de auto-inserción del UI

--- a/contacto.html
+++ b/contacto.html
@@ -258,6 +258,7 @@
     <script src="js/dark-mode.js?v=2025111508" defer></script>
     <script src="js/ux.js?v=2025111508" defer></script>
     <script src="js/ambient.js?v=2025111508" defer></script>
+    <script src="js/ambient-sounds.js?v=2025111508" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
