--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -185,5 +185,6 @@
     <script src="js/main.js?v=2025111508" defer></script>
     <script src="js/scroll-animations.js?v=2025111508" defer></script>
     <script src="js/dark-mode.js?v=2025111508" defer></script>
+    <script src="js/ambient-sounds.js?v=2025111508" defer></script>
 </body>
 </html>
