--- a/blog.html
+++ b/blog.html
@@ -103,5 +103,6 @@
   <script src="js/scroll-animations.js?v=2025111508" defer></script>
   <script src="js/dark-mode.js?v=2025111508" defer></script>
   <script src="js/blog.js?v=2025111508" defer></script>
+  <script src="js/ambient-sounds.js?v=2025111508" defer></script>
 </body>
 </html>
