--- a/noticias.html
+++ b/noticias.html
@@ -215,6 +215,7 @@
     <script src="js/dark-mode.js?v=2025111508" defer></script>
     <script src="js/form-validation.js?v=2025111508" defer></script>
     <script src="js/narrative-scroll.js?v=2025111508" defer></script>
+    <script src="js/ambient-sounds.js?v=2025111508" defer></script>
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent">
