--- a/playas.html
+++ b/playas.html
@@ -68,6 +68,7 @@
                 <li><a href="alojamiento.html">Alojamiento</a></li>
                 <li><a href="playas.html" aria-current="page">Playas</a></li>
                 <li><a href="gastronomia.html">Gastronomía</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
