--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://thisisfuerteventura.netlify.app/blog.html">
   <meta property="og:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app http://localhost:3000 http://localhost:3001; base-uri 'self'; object-src none; frame-ancestors 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app http://localhost:3000 http://localhost:3001; base-uri 'self'; object-src none; frame-ancestors 'self'; frame-src 'self' https://www.facebook.com;">
 </head>
 <body>
   <a class="skip-link" href="#main">Saltar al contenido principal</a>
@@ -59,6 +59,16 @@
 
     <section class="reveal">
       <div id="blog-list"></div>
+    </section>
+
+    <section class="reveal">
+      <h2>Facebook: lo último de la isla</h2>
+      <div class="content-card" style="overflow:hidden">
+        <iframe title="Facebook Feed" style="border:none;overflow:hidden;width:100%;height:720px"
+          src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61583457788241&tabs=timeline&width=500&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false"
+          scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        <p class="meta">Si no puedes ver el feed, visita <a href="https://www.facebook.com/profile.php?id=61583457788241" target="_blank" rel="noopener noreferrer">nuestro Facebook</a>.</p>
+      </div>
     </section>
   </main>
 
