--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <meta name="twitter:title" content="This is Fuerteventura - Guía Turística Completa 2025">
     <meta name="twitter:description" content="Descubre Fuerteventura: playas, hoteles, restaurantes y actividades imprescindibles.">
     <meta name="twitter:image" content="https://thisisfuerteventura.netlify.app/images/logo.jpg">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-q/E19laQ8YkNXt/2DHRkmiWwwkEBSOU9ynZbH746Tn0=' 'sha256-wu+NVa8OHFEV3NFqw5k+OVKNgRVx9fkUfbY9FVk1cxo='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001 https://api.open-meteo.com https://marine-api.open-meteo.com; base-uri 'self'; object-src none; frame-ancestors 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://www.googletagmanager.com https://analytics.google.com 'sha256-q/E19laQ8YkNXt/2DHRkmiWwwkEBSOU9ynZbH746Tn0=' 'sha256-wu+NVa8OHFEV3NFqw5k+OVKNgRVx9fkUfbY9FVk1cxo='; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https://thisisfuerteventura.netlify.app https://unpkg.com https://*.tile.openstreetmap.org; media-src 'self'; connect-src 'self' https://thisisfuerteventura.netlify.app https://www.googletagmanager.com https://analytics.google.com http://localhost:3000 http://localhost:3001 http://localhost:* http://127.0.0.1:* https://api.open-meteo.com https://marine-api.open-meteo.com; base-uri 'self'; object-src none; frame-ancestors 'self';">
     <meta name="twitter:site" content="@thisisfuerteventura">
     
     <!-- Structured Data: Website -->
@@ -111,6 +111,7 @@
                 <li><a href="alojamiento.html">Alojamiento</a></li>
                 <li><a href="playas.html">Playas</a></li>
                 <li><a href="gastronomia.html">Gastronomía</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -174,11 +175,17 @@
     <section class="reveal widgets-section">
         <h2>Condiciones Actuales</h2>
         <div class="widgets-grid">
-            <div id="weather-widget">
-                <div class="loading">Cargando clima...</div>
+            <div id="weather-widget" class="conditions-card">
+                <h3><i class="fas fa-sun"></i> Tiempo</h3>
+                <div class="widget-body">
+                    <div class="loading">Cargando tiempo...</div>
+                </div>
             </div>
-            <div id="wave-widget">
-                <div class="loading">Cargando condiciones del mar...</div>
+            <div id="wave-widget" class="conditions-card">
+                <h3><i class="fas fa-water"></i> Mar</h3>
+                <div class="widget-body">
+                    <div class="loading">Cargando condiciones del mar...</div>
+                </div>
             </div>
         </div>
     </section>
@@ -393,5 +400,6 @@
     <script src="js/quiz.js?v=2025111508" defer></script>
     <script src="js/ambient-sounds.js?v=2025111508" defer></script>
     <script src="js/narrative-scroll.js?v=2025111508" defer></script>
+    <script src="js/realtime.js?v=2025111508" defer></script>
 </body>
 </html>
