--- a/turismo.html
+++ b/turismo.html
@@ -74,6 +74,7 @@
                 <li><a href="alojamiento.html">Alojamiento</a></li>
                 <li><a href="playas.html">Playas</a></li>
                 <li><a href="gastronomia.html">Gastronomía</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
