--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
   <main id="main">
     <section class="hero parallax reveal hero-video">
       <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
-        <source src="images/VideoHeader.mp4" type="video/mp4">
+        <source src="images/VideoHeader.mp4" type="video/mp4" fetchpriority="high">
         Tu navegador no soporta vídeo.
       </video>
       <div class="hero-overlay"></div>
