--- a/playas.html
+++ b/playas.html
@@ -79,8 +79,8 @@
 
     <main id="main">
     <section class="hero beaches-hero parallax reveal hero-video">
-        <video autoplay muted loop playsinline class="hero-bg" poster="images/Fuerteventura.jpeg">
-            <source src="images/VideoHeader.mp4" type="video/mp4">
+        <video autoplay muted loop playsinline preload="metadata" class="hero-bg" poster="images/Fuerteventura.jpeg">
+            <source src="images/VideoHeader.mp4" type="video/mp4" fetchpriority="high">
             Tu navegador no soporta vídeo.
         </video>
         <div class="hero-overlay"></div>
